# poetry-python-template

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE  README.md  build.sh  lints_and_checks.sh  pyproject.toml
src/: main.py
src/example/: cli.py
src/example/common/: __init__.py  logging.py  name.py  output.py  version.py
src/example/utils/: __init__.py  argsparser.py  file_system.py
src/utils/: __init__.py  args.py  logging.py  version.py
tests/: __init__.py
