[tool.poetry]
name = "TBC"
version = "0.0.0" # Placeholder version for dynamic versioning
description = "TBC"
authors = ["TBC"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src", from = "." }
]
exclude = [".gitignore"]

[tool.poetry.scripts]
terraform-state-migrator = "src.main:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
logging = "^0.4.9.6"
argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
autopep8 = "^2.3.1"
pylint = "^3.2.7"
pytest = "^8.3.3"
pytest-bdd = "^7.2.0"
pyinstaller = "^6.10.0"
pre-commit = "^3.8.0"
isort = "^5.13.2"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
